third_party/rust/chromium_crates_io/vendor/zerocopy-0.8.23/tests/ui-msrv/transmute-mut-dst-not-a-reference.stderr
error[E0308]: mismatched types
  --> tests/ui-msrv/transmute-mut-dst-not-a-reference.rs:17:36
   |
17 | const DST_NOT_A_REFERENCE: usize = transmute_mut!(&mut 0u8);
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found `&mut _`
   |
   = note:           expected type `usize`
           found mutable reference `&mut _`
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui-msrv/transmute-mut-dst-not-a-reference.rs:17:36
   |
17 | const DST_NOT_A_REFERENCE: usize = transmute_mut!(&mut 0u8);
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found `&mut _`
   |
   = note:           expected type `usize`
           found mutable reference `&mut _`
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui-msrv/transmute-mut-dst-not-a-reference.rs:17:36
   |
17 | const DST_NOT_A_REFERENCE: usize = transmute_mut!(&mut 0u8);
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found `&mut _`
   |
   = note:           expected type `usize`
           found mutable reference `&mut _`
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui-msrv/transmute-mut-dst-not-a-reference.rs:17:36
   |
17 | const DST_NOT_A_REFERENCE: usize = transmute_mut!(&mut 0u8);
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found `&mut _`
   |
   = note:           expected type `usize`
           found mutable reference `&mut _`
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui-msrv/transmute-mut-dst-not-a-reference.rs:17:36
   |
17 | const DST_NOT_A_REFERENCE: usize = transmute_mut!(&mut 0u8);
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found `&mut _`
   |
   = note:           expected type `usize`
           found mutable reference `&mut _`
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)
